My addresses header z-index fixed

--- a/app/assets/styles/section.scss
+++ b/app/assets/styles/section.scss
@@ -13,7 +13,7 @@ $headerHeight: 5rem;
   align-items: center;
   overflow: visible;
 
-  z-index: 1000;
+  z-index: 900;
 
   .title {
     font-size: 1.25rem;
